--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <header class="masthead bg-primary text-white text-center">
     <div class="container d-flex align-items-center flex-column">
         <!-- Masthead Avatar Image-->
-        <img class="masthead-avatar mb-5" src="../templete/assets/img/apolinario.png" alt="..." />
+        <img class="masthead-avatar mb-5" src="assets/img/apolinario.png" alt="..."  style="border-radius: 100%;" />
         <!-- Masthead Heading-->
         <h1 class="masthead-heading text-uppercase mb-0">Apolinario Nzango</h1>
         <!-- Icon Divider-->
@@ -71,7 +71,7 @@
                     <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                         <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                     </div>
-                    <img class="img-fluid" src="assets/img/pizza.png" alt="..." />
+                    <img class="img-fluid" src="assets/img/fibra.png" alt="..."  style="width: 2rm;" />
                 </div>
             </div>
             <!-- Portfolio Item 2-->
